--- a/_sass/cvio/setting.scss
+++ b/_sass/cvio/setting.scss
@@ -14,7 +14,7 @@ $active_color: #4bffa5;
 $error_color: red;
 
 /* Fonts */
-$default_font: 'Poppins';
+$default_font: 'Roboto';
 
 /* Fonts Size */
 $default_size: 16px;
